--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-glfw:$lwjglVersion:$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
 
+    implementation 'org.joml:joml:1.10.8'
+
     implementation 'io.github.spair:imgui-java-binding:1.86.10'
     implementation 'io.github.spair:imgui-java-lwjgl3:1.86.10'
     runtimeOnly 'io.github.spair:imgui-java-natives-windows:1.86.10'
