feat: annotation-based Entry registration, API selection, and Timestep support
- Introduced @Entry, @UseRendererAPI, and @UseApplication annotations for automatic EntryPoint registration
- Added Timestep class for delta time calculation
- Fully abstracted rendering logic; OpenGL code no longer exposed in higher-level layers

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
+    implementation 'org.reflections:reflections:0.10.2'
+
     implementation 'org.slf4j:slf4j-api:2.0.12'
     implementation 'ch.qos.logback:logback-classic:1.4.14'
 
